module8/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ironman
  labels:
    name: ironman
    app: ironman
spec:
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 1 
      maxUnavailable: 1 
  replicas: 5
  selector:
    matchLabels:
      app: ironman
  template:
    metadata:
      labels:
        app: ironman
    spec:
      nodeSelector:
        <node-label-key>:<node-label-value>
      containers:
        - name: ironman
          image: ghjjhg567/ironman:latest
          ports:
            - containerPort: 8100
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /v1/hc
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf-volume
              subPath: nginx.conf
              readOnly: true
            - mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              name: nginx-route-volume
              readOnly: true
      volumes:
        - name: nginx-conf-volume
          configMap:
            name: nginx-config
        - name: nginx-route-volume
          configMap:
            name: nginx-route-volume
