module8/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paul-service
spec:
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: httpserver
