module8/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paul-ingress
  labels:
    ingresscontroller: haproxy
  annotations: 
    kubernetes.io/ingress.class: haproxy 
spec:
  tls:
    - hosts:
      - api-paul.skyraker.com
      secretName: haproxy-tls
  rules:
  - host: api.skyraker.com
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: paul-service
            port:
              number: 3000
